# auto-reddit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  License.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
TFM/: diario.md  guia-didactica-auto-reddit.md  motivacion.md  presentacion.html
docs/: README.md  architecture.md  deployment.md  operations.md
docs/discovery/: idea-inicial.md  ideas.md
docs/product/: ai-style.md  product.md
openspec/: README.md  config.yaml
openspec/changes/: README.md
openspec/discovery/: ai-opportunity-evaluation.md  candidate-memory-and-uniqueness.md  connect-or-remove-half-landed-logic.md  docs-information-architecture-cleanup.md  environment-persistence-execution-hardening.md  minimum-ci-baseline.md  operational-integration-tests.md  reddit-candidate-collection.md  runtime-documented-truth-alignment.md  settings-govern-runtime.md  telegram-daily-delivery.md  telegram-smoke-tests.md  thread-context-extraction.md
openspec/initiative/: post-pipeline-alignment-hardening.md
openspec/specs/: README.md
scripts/: README.md  reddit_api_raw_snapshot.py
skills/deepseek-integration/: SKILL.md
skills/docker-deployment/: SKILL.md
skills/python-conventions/: SKILL.md
src/auto_reddit/: __init__.py  main.py
tests/: conftest.py  test_ci_workflow.py  test_import_smoke.py  test_infra_hardening.py  test_main.py  test_settings_govern_runtime.py
tests/test_delivery/: test_deliver_daily.py  test_renderer.py  test_selector.py  test_telegram.py
tests/test_reddit/: conftest.py  (+2 more)
(+137 files in other folders)
