[project]
name = "auto-reddit"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "openai",
    "httpx",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_reddit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
